--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,11 @@
     name: azure-cli
     state: present
 
+- name: "azure-cli | install epel-release for jq"
+  yum:
+    name: epel-release
+    state: present
+
 - name: "azure-cli | install jq"
   yum:
     name: jq
